# breakdown

./: GEMINI.md  README.md  main.py  pyproject.toml
breakdown/: data_fetch.py  parser.py
breakdown/api/: main.py
breakdown/engine/: model.py
docs/ai-context/: frontend-ui.md  python-backend.md  yaml-syntax.md
examples/: jaffle_shop_tree.yml
static/: index.html
tests/: test_engine.py  test_parser.py
